# astropy-hdf5io

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  install.md  pyproject.toml  structure.txt  summary.txt
github/workflows/: publish.yml  tests.yml
src/astropy_hdf5io/: __init__.py  _coordinates.py  _group_utils.py  _munch_utils.py  _quantity.py  _skycoord.py  _table.py  _time.py
tests/: test_coordinates.py  test_group_utils.py  test_quantity.py  test_recursive.py  test_skycoord.py  test_table.py  test_time.py
